# memento-ai

./: README.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml
demo/: README.md
demo/backend/: main.py  requirements.txt
demo/frontend/: package-lock.json
demo/frontend/src/: App.tsx  index.css
docs/: OLLAMA_EMBEDDINGS_SPEC.md  TESTING_CHECKLIST.md
examples/simple_agent/: main.py
landing/: next.config.ts  pnpm-lock.yaml
landing/public/: CNAME
landing/src/app/: globals.css  layout.tsx  page.tsx
landing/src/components/ui/: animated-gradient-text.tsx  bento-grid.tsx  code-tabs.tsx  shimmer-button.tsx  theme-toggle.tsx  typing-animation.tsx
scripts/: publish.sh
site/: index.html
src/ai_semantic_memory/: store.py
src/engram_ai/: __init__.py  consolidation.py  contradiction.py  extraction.py  graph.py  nodes.py  retrieval.py  schema.py  store.py
src/engram_ai/backends/: __init__.py  base.py  duckdb.py  factory.py  postgres.py  sqlite.py
src/memable/: __init__.py  schema.py  store.py
tests/: conftest.py
tests/integration/: test_contradiction.py  test_extraction.py  test_store.py
tests/performance/: test_storage_growth.py
tests/unit/: test_consolidation.py  test_duckdb_backend.py  test_enhancements.py  test_retrieval.py  test_schema.py  test_sqlite_backend.py
