[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "engram-ai"
version = "0.1.0"
description = "Reusable semantic memory library for LangGraph agents with PostgreSQL/pgvector"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Joel Ash" }
]
keywords = ["langgraph", "memory", "semantic", "ai", "agents", "postgres", "pgvector"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "langgraph>=0.2.0",
    "langgraph-checkpoint-postgres>=2.0.0",
    "langchain-openai>=0.3.0",
    "langchain-core>=0.3.0",
    "psycopg[binary]>=3.1.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "testcontainers[postgres]>=4.0.0",  # for integration tests
]

[project.urls]
Repository = "https://github.com/joelash/engram-ai"

[tool.hatch.build.targets.wheel]
packages = ["src/engram_ai"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests (no external dependencies)",
    "integration: Integration tests (requires postgres)",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
